Fix spacing issues

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -460,7 +460,8 @@ span.icon.big>img {
 }
 
 p>.icon {
-  vertical-align: bottom;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /*-------------------------------------*/
